fixed modal button display on mobile

--- a/src/css/Modal.module.css
+++ b/src/css/Modal.module.css
@@ -1,3 +1,4 @@
+/* mobile */
 .Modal {
   position: fixed;
   z-index: 500;
@@ -7,16 +8,19 @@
   box-shadow: 1px 1px 1px black;
   padding: 16px;
   left: 15%;
-  top: 20%;
+  /* top was 30% */
+  top: 3%;
   box-sizing: border-box;
   transition: all 0.3s ease-out;
+  overflow: scroll;
 }
 
+/* desktop */
 @media (min-width: 600px) {
   .Modal {
     position: fixed;
     width: 500px;
     left: calc(50% - 250px);
-    margin-top: 0;
+    top: 30%;
   }
 }
